// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table.Basic > columns support JSX condition 1`] = `
<button>
  Click 
  2
   times
</button>
`;

exports[`Table.Basic > custom components > renders correctly 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        name="my-table"
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
          name="my-header-wrapper"
        >
          <tr
            name="my-header-row"
          >
            <th
              class="rc-table-cell"
              name="my-header-cell"
              scope="col"
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
          name="my-body-wrapper"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key0"
            name="my-body-row"
          >
            <td
              class="rc-table-cell"
              name="my-body-cell"
            >
              Lucy
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key1"
            name="my-body-row"
          >
            <td
              class="rc-table-cell"
              name="my-body-cell"
            >
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > custom components > renders fixed column and header correctly 1`] = `
<div
  class="rc-table rc-table-fix-start-shadow rc-table-fix-end-shadow rc-table-fixed-header rc-table-fixed-column rc-table-scroll-horizontal rc-table-has-fix-start rc-table-has-fix-end"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-header"
      style="overflow: hidden;"
    >
      <table
        style="table-layout: fixed; visibility: hidden;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
          name="my-header-wrapper"
        >
          <tr
            name="my-header-row"
          >
            <th
              class="rc-table-cell rc-table-cell-fix rc-table-cell-fix-start rc-table-cell-fix-start-shadow"
              name="my-header-cell"
              scope="col"
              style="inset-inline-start: 0; --z-offset: 8; --z-offset-reverse: 0;"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
              name="my-header-cell"
              scope="col"
            >
              Age
            </th>
            <th
              class="rc-table-cell rc-table-cell-fix rc-table-cell-fix-end rc-table-cell-fix-end-shadow"
              name="my-header-cell"
              scope="col"
              style="inset-inline-end: 15px; --z-offset: 2; --z-offset-reverse: 6;"
            >
              Gender
            </th>
            <th
              class="rc-table-cell rc-table-cell-fix rc-table-cell-fix-end rc-table-cell-scrollbar"
              name="my-header-cell"
              style="inset-inline-end: 0; --z-offset: 3; --z-offset-reverse: 5;"
            />
          </tr>
        </thead>
      </table>
    </div>
    <div
      class="rc-table-body"
      style="overflow-x: auto; overflow-y: scroll; max-height: 100px;"
    >
      <table
        name="my-table"
        style="width: 100px; min-width: 100%; table-layout: fixed;"
      >
        <colgroup />
        <tbody
          class="rc-table-tbody"
          name="my-body-wrapper"
        >
          <tr
            aria-hidden="true"
            class="rc-table-measure-row"
            style="height: 0px; font-size: 0px;"
          >
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="0"
            name="my-body-row"
          >
            <td
              class="rc-table-cell rc-table-cell-fix rc-table-cell-fix-start rc-table-cell-fix-start-shadow"
              name="my-body-cell"
              style="inset-inline-start: 0; --z-offset: 6; --z-offset-reverse: 0;"
            >
              Lucy
            </td>
            <td
              class="rc-table-cell"
              name="my-body-cell"
            >
              27
            </td>
            <td
              class="rc-table-cell rc-table-cell-fix rc-table-cell-fix-end rc-table-cell-fix-end-shadow"
              name="my-body-cell"
              style="inset-inline-end: 0; --z-offset: 2; --z-offset-reverse: 4;"
            >
              F
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > custom components > scroll content > with scroll 1`] = `
<div
  class="rc-table rc-table-fix-start-shadow rc-table-fix-end-shadow rc-table-fixed-header rc-table-scroll-horizontal"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-header"
      style="overflow: hidden;"
    >
      <table
        style="table-layout: fixed;"
      >
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 888px;"
          />
          <col
            style="width: 15px;"
          />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
            />
            <th
              class="rc-table-cell"
            />
            <th
              class="rc-table-cell rc-table-cell-scrollbar"
            />
          </tr>
        </thead>
      </table>
    </div>
    <h1>
      Bamboo
    </h1>
  </div>
</div>
`;

exports[`Table.Basic > internal api > transformColumns > basic 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
              scope="col"
            >
              before
            </th>
            <th
              class="rc-table-cell"
              scope="col"
            >
              Name
            </th>
            <th
              class="rc-table-cell"
              scope="col"
            >
              after
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key0"
          >
            <td
              class="rc-table-cell"
            />
            <td
              class="rc-table-cell"
            >
              Lucy
            </td>
            <td
              class="rc-table-cell"
            />
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key1"
          >
            <td
              class="rc-table-cell"
            />
            <td
              class="rc-table-cell"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > renders colSpan correctly 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
              colspan="2"
              scope="colgroup"
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key0"
          >
            <td
              class="rc-table-cell"
              colspan="2"
            >
              John
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key1"
          >
            <td
              class="rc-table-cell"
            >
              Terry
            </td>
            <td
              class="rc-table-cell"
            >
              Garner
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > renders correctly > RTL 1`] = `
<div
  class="test-prefix test-class-name test-prefix-rtl"
>
  <div
    class="test-prefix-container"
  >
    <div
      class="test-prefix-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="test-prefix-thead"
        >
          <tr>
            <th
              class="test-prefix-cell"
              scope="col"
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="test-prefix-tbody"
        >
          <tr
            class="test-prefix-row test-prefix-row-level-0"
            data-row-key="key0"
          >
            <td
              class="test-prefix-cell"
            >
              Lucy
            </td>
          </tr>
          <tr
            class="test-prefix-row test-prefix-row-level-0"
            data-row-key="key1"
          >
            <td
              class="test-prefix-cell"
            >
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > renders correctly > basic 1`] = `
<div
  class="test-prefix test-class-name"
>
  <div
    class="test-prefix-container"
  >
    <div
      class="test-prefix-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="test-prefix-thead"
        >
          <tr>
            <th
              class="test-prefix-cell"
              scope="col"
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="test-prefix-tbody"
        >
          <tr
            class="test-prefix-row test-prefix-row-level-0"
            data-row-key="key0"
          >
            <td
              class="test-prefix-cell"
            >
              Lucy
            </td>
          </tr>
          <tr
            class="test-prefix-row test-prefix-row-level-0"
            data-row-key="key1"
          >
            <td
              class="test-prefix-cell"
            >
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > renders correctly > column children undefined 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
              scope="col"
            >
              姓名
            </th>
            <th
              class="rc-table-cell"
              scope="col"
            >
              年龄
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key0"
          >
            <td
              class="rc-table-cell"
            >
              Lucy
            </td>
            <td
              class="rc-table-cell"
            />
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key1"
          >
            <td
              class="rc-table-cell"
            >
              Jack
            </td>
            <td
              class="rc-table-cell"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > renders correctly > falsy columns 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
              scope="col"
            >
              姓名
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key0"
          >
            <td
              class="rc-table-cell"
            >
              Lucy
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key1"
          >
            <td
              class="rc-table-cell"
            >
              Jack
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > renders correctly > no columns 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
            />
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key0"
          >
            <td
              class="rc-table-cell"
            />
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key1"
          >
            <td
              class="rc-table-cell"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > renders rowSpan correctly 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
              scope="col"
            >
              First Name
            </th>
            <th
              class="rc-table-cell"
              scope="col"
            >
              Last Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key0"
          >
            <td
              class="rc-table-cell"
            >
              John
            </td>
            <td
              class="rc-table-cell"
              rowspan="2"
            >
              Doe
            </td>
          </tr>
          <tr
            class="rc-table-row rc-table-row-level-0"
            data-row-key="key1"
          >
            <td
              class="rc-table-cell"
            >
              Terry
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > should get scrollbar size 1`] = `
<div
  class="rc-table rc-table-fixed-header"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-header"
      style="overflow: hidden;"
    >
      <table
        style="table-layout: fixed;"
      >
        <colgroup>
          <col
            style="width: 85px;"
          />
          <col
            style="width: 15px;"
          />
        </colgroup>
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
              scope="col"
            >
              Name
            </th>
            <th
              class="rc-table-cell rc-table-cell-scrollbar"
            />
          </tr>
        </thead>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.Basic > syntactic sugar 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-container"
  >
    <div
      class="rc-table-content"
    >
      <table
        style="table-layout: auto;"
      >
        <colgroup />
        <thead
          class="rc-table-thead"
        >
          <tr>
            <th
              class="rc-table-cell"
              scope="col"
            >
              total
            </th>
          </tr>
          <tr>
            <th
              class="rc-table-cell"
              scope="col"
            >
              Name
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody"
        >
          <tr
            class="rc-table-placeholder"
          >
            <td
              class="rc-table-cell"
            >
              No Data
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
